# ROS-TheConstruct-Courses

./: README.md
ros_basics_5_days_ws/src/: README.md
ros_basics_5_days_ws/src/actions_quiz/: CMakeLists.txt  package.xml
ros_basics_5_days_ws/src/logger_example_pkg/: CMakeLists.txt  package.xml
ros_basics_5_days_ws/src/my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
ros_basics_5_days_ws/src/my_examples_pkg/: package.xml
ros_basics_5_days_ws/src/my_sphero_actions/: CMakeLists.txt  package.xml
ros_basics_5_days_ws/src/my_sphero_topics/: package.xml
ros_basics_5_days_ws/src/services_quiz/: CMakeLists.txt  package.xml
ros_basics_5_days_ws/src/turtlebot_project/my_turtlebot_actions/: CMakeLists.txt  package.xml
ros_basics_5_days_ws/src/turtlebot_project/my_turtlebot_actions/action/: record_odom.action
ros_basics_5_days_ws/src/turtlebot_project/my_turtlebot_actions/src/: action_client_maze.py  action_server_maze.py  odom_subscriber.py  odometry_analysis.py
ros_basics_5_days_ws/src/unit_4_services/: CMakeLists.txt
ros_basics_5_days_ws/src/unit_8_actions/: CMakeLists.txt  package.xml
tf_ros_101_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
tf_ros_101_ws/src/tf_publish_and_subscribe/: CMakeLists.txt  package.xml
urdf_for_robot_modelling_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
urdf_for_robot_modelling_ws/src/my_gurdy_description/: CMakeLists.txt
(+141 files in other folders)
