<?xml version="1.0"?>
<package format="2">
  <name>my_turtlebot_actions</name>
  <version>0.0.0</version>
  <description>The my_turtlebot_actions package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
  </export>
</package>